--- a/src-ui/renderer/editor/editor.css
+++ b/src-ui/renderer/editor/editor.css
@@ -1,9 +1,11 @@
 #editor-top-menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 0.5em;
   border-left: var(--outline-color) 0.15em solid;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #editor-top-menu > div {
